src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>This field indicates the Preferred Language of the Lead</description>
        <inlineHelpText>Shows the language that marketing will send communications in</inlineHelpText>
        <label>Marketing Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish (Mexico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Cons_of_other_solution__c</fullName>
        <description>This field captures the Pro/Cons of other solution</description>
        <label>Pro/Cons of other solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This field indicates the Product Families present</description>
        <label>Product/Solution of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Location Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Kiosks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narrowband Digital Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printer Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair and Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <description>This field is created as part of Sprint 6</description>
        <label>Product Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>Access Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Scanners Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Laminates &amp; Overlays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printer Cleaning Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printer Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dart UWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Printer Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet Wallplate Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensions (Mx)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Mount Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Reader Antenna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand-Held Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand-Held Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hands-Free &amp; On-Counter Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Counter Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Printer Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk Printer Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels and Tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser, Thermal and RFID Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locations Solutions Software</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>This field shows the Promo Code</description>
        <inlineHelpText>Shows whether lead has responded to a promotion</inlineHelpText>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Authority__c</fullName>
        <description>This field shows the values for Purchasing authority of Lead</description>
        <label>Purchasing Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Complete Authority and Sole DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence and Access to DM&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is One of Several DM&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authority, Access to DM&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authority,No Access to DM&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_Role__c</fullName>
        <description>This field indicates the purchasing role of the Lead</description>
        <label>Purchasing Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gather Info Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Involved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R11i_Lead_ID__c</fullName>
        <description>This Field is created to Capture the Rlli Id (Lead_Number)</description>
        <externalId>true</externalId>
        <label>R11i Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Loss_Rejected__c</fullName>
        <description>This field is required at Lead Closure. It shows the reasons for Won Lead, Lost Lead and Rejected Lead</description>
        <label>Lead Status Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Budget cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Product Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate lead/opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Competitive Install Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Zebra Install Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect contact details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Incorrectly Routed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Received Too Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to another Zebra partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Zebra competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Qualified Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project delayed +12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect contact name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect phone/email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested/Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer at company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Marketing inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Zebra inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Outsourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met customers’ needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount offered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_URL__c</fullName>
        <description>This field shows the Referrer URL</description>
        <label>Referrer URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is used to capture Region on the basis of the country</description>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Data_Mapping_Account_ID__c</fullName>
        <description>Hidden field used for Siebel Data Migration</description>
        <label>Siebel Data Mapping Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Data_Mapping_Contact_ID__c</fullName>
        <label>Siebel Data Mapping Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Built to deliver requirement #A145, This is no longer required</description>
        <label>Lead Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <description>This field is used to capture Sub-Region on the basis of the country.</description>
        <label>Sub-Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>This field identifies the Territory of the Lead</description>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>West Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Partner_Company_Name__c</fullName>
        <label>Test - Partner Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Test - Partner Company Name)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>This field shows the Theatre of the Lead</description>
        <label>Theater</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeframe_Description__c</fullName>
        <description>This field is used to capture the details about the timeframe</description>
        <label>Timeframe Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_For_Oppty_Mapping__c</fullName>
        <formula>text(Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertical (For Oppty Mapping)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment_For_Account_Mapping__c</fullName>
        <formula>text(Vertical_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertical Segment(For Account Mapping)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment__c</fullName>
        <description>This field indicates the picklist values available for Vertical Segment</description>
        <label>Vertical Segment</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Physical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Emergency and Ambulatory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Out Patient Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Physician Offices and Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Reference and Diagnostic Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Urgent Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks Museums and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>This field indicates the Vertical of Lead</description>
        <label>Vertical (Deleted)</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications &amp; Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Ref__c</fullName>
        <description>This field contains details for Visit Ref</description>
        <label>Visit Ref</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZCC_Owner__c</fullName>
        <description>This field is a Look up to user. It is used to store ZCC Owners</description>
        <label>MCC Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Eloqua_Generated_Lead</fullName>
        <active>true</active>
        <description>Record Type for Leads flowing in from Eloqua</description>
        <label>Eloqua Generated Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Generated_Lead</fullName>
        <active>true</active>
        <description>Record Type for Leads Created by Marketing Interface</description>
        <label>Marketing Generated Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Assigned_Lead</fullName>
        <active>true</active>
        <description>This Lead Record type is displayed for the Marketing Leads assigned to Sales users</description>
        <label>Sales Assigned Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Generated_Lead</fullName>
        <active>true</active>
        <description>Record Type for Leads Created by Internal Users</description>
        <label>Sales Generated Lead</label>
    </recordTypes>
    <validationRules>
        <fullName>Lead_Account_Type_Is_Required</fullName>
        <active>true</active>
        <description>Account Type is Required for MGL/EGL when Lead Status is In Progress</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;
( 
ISPICKVAL(Status, &apos;In Progress&apos;) || 
ISPICKVAL(Status, &apos;Marketing Qualified&apos;) || 
ISPICKVAL(Status, &apos;Assigned&apos;) || 
ISPICKVAL(Status, &apos;Accepted&apos;) || 
ISPICKVAL(Status, &apos;Sales Qualified&apos;) || 
ISPICKVAL(Status, &apos;Closed Lost&apos;) || 
ISPICKVAL(Status, &apos;Closing Deal&apos;) 
)
&amp;&amp; 
(ISPICKVAL(Account_Type__c,&apos;&apos;)) &amp;&amp; NOT($Setup.RulesDeactivateSwitch__c.Lead_Switch__c)</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>Please fill the Account Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Budget_Status_Is_Required</fullName>
        <active>true</active>
        <description>Budget Status is Required for MGL/EGL when Lead Status is In Progress or Marketing Qualified or Assigned</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(((RecordType.DeveloperName = &apos;Marketing_Generated_Lead&apos; || RecordType.DeveloperName = &apos;Eloqua_Generated_Lead&apos; || RecordType.DeveloperName = &apos;Sales_Assigned_Lead&apos;) &amp;&amp; 
( 
ISPICKVAL(Status, &apos;In Progress&apos;) || 
ISPICKVAL(Status, &apos;Marketing Qualified&apos;) || 
ISPICKVAL(Status, &apos;Assigned&apos;) ||
ISPICKVAL(Status, &apos;Accepted&apos;) ||
ISPICKVAL(Status, &apos;Sales Qualified&apos;) ||
ISPICKVAL(Status, &apos;Closed Lost&apos;) ||
ISPICKVAL(Status, &apos;Closing Deal&apos;) 
))) 
&amp;&amp; 
(ISPICKVAL(Budget_Status__c,&apos;&apos;)) &amp;&amp; NOT($Setup.RulesDeactivateSwitch__c.Lead_Switch__c)</errorConditionFormula>
        <errorDisplayField>Budget_Status__c</errorDisplayField>
        <errorMessage>Please select Budget Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_City_Is_Required</fullName>
        <active>true</active>
        <description>Lead City is Required for MGL/EGL when Lead Status is In Progress or  Marketing Qualified or Assigned</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(((RecordType.DeveloperName = &apos;Marketing_Generated_Lead&apos; || RecordType.DeveloperName = &apos;Eloqua_Generated_Lead&apos; || RecordType.DeveloperName = &apos;Sales_Assigned_Lead&apos;) &amp;&amp; 
( 
ISPICKVAL(Status, &apos;In Progress&apos;) || 
ISPICKVAL(Status, &apos;Marketing Qualified&apos;) || 
ISPICKVAL(Status, &apos;Assigned&apos;) || 
ISPICKVAL(Status, &apos;Accepted&apos;) || 
ISPICKVAL(Status, &apos;Rejected&apos;) || 
ISPICKVAL(Status, &apos;Sales Qualified&apos;) || 
ISPICKVAL(Status, &apos;Rejected&apos;) || 
ISPICKVAL(Status, &apos;Closed Lost&apos;) || 
ISPICKVAL(Status, &apos;Closing Deal&apos;) 
)) 
) 
&amp;&amp; 
(ISBLANK(City)) &amp;&amp; NOT($Setup.RulesDeactivateSwitch__c.Lead_Switch__c)</errorConditionFormula>
        <errorDisplayField>City</errorDisplayField>
        <errorMessage>Please fill the City</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Close_date_cannot_be_in_Past</fullName>
        <active>true</active>
        <description>A user cannot set a close date in the past</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(!ISBLANK(Estimated_Close_Date__c) &amp;&amp; (Estimated_Close_Date__c &lt; today()))&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Lead_Switch__c)
&amp;&amp; 
(RecordType.DeveloperName &lt;&gt; &apos;Sales_Generated_Lead&apos; )</errorConditionFormula>
        <errorDisplayField>Estimated_Close_Date__c</errorDisplayField>
        <errorMessage>Estimated Close Date cannot be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Close_date_greater_than_12_months</fullName>
        <active>true</active>
        <description>A user cannot set a close date greater than # months</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(!ISBLANK(Estimated_Close_Date__c) &amp;&amp; (Estimated_Close_Date__c &gt; today()+ 365))&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Lead_Switch__c)
&amp;&amp; 
(RecordType.DeveloperName &lt;&gt; &apos;Sales_Generated_Lead&apos; )</errorConditionFormula>
        <errorMessage>Estimated Close Date cannot be greater than 12 Months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Company_Is_Required</fullName>
        <active>true</active>
        <description>Company is Required for MGL/EGL when Lead Status is New or Callback</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(((RecordType.DeveloperName = &apos;Marketing_Generated_Lead&apos; || RecordType.DeveloperName = &apos;Eloqua_Generated_Lead&apos; || RecordType.DeveloperName = &apos;Sales_Assigned_Lead&apos;) &amp;&amp; 
(ISPICKVAL(Status, &apos;New&apos;) || 
ISPICKVAL(Status, &apos;Callback&apos;) || 
ISPICKVAL(Status, &apos;In Progress&apos;) || 
ISPICKVAL(Status, &apos;Marketing Qualified&apos;) || 
ISPICKVAL(Status, &apos;Assigned&apos;) ||
ISPICKVAL(Status, &apos;Closed&apos;) ||
ISPICKVAL(Status, &apos;Accepted&apos;) ||
ISPICKVAL(Status, &apos;Rejected&apos;) ||
ISPICKVAL(Status, &apos;Sales Qualified&apos;) ||
ISPICKVAL(Status, &apos;Rejected&apos;) ||
ISPICKVAL(Status, &apos;Closed Lost&apos;) ||
ISPICKVAL(Status, &apos;Closing Deal&apos;) 
)) 
) 
&amp;&amp; 
(ISBLANK(Company)) &amp;&amp; NOT($Setup.RulesDeactivateSwitch__c.Lead_Switch__c)</errorConditionFormula>
        <errorDisplayField>Company</errorDisplayField>
        <errorMessage>Please fill Company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Contact_First_Name</fullName>
        <active>true</active>
        <description>Validates that the contact First Name is always provided.</description>
        <errorConditionFormula>($User.Alias &lt;&gt; &apos;zzebi&apos;)&amp;&amp;(ISBLANK( FirstName ))&amp;&amp; NOT(  $Setup.RulesDeactivateSwitch__c.Lead_Switch__c)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please fill in the First Name</errorMessage>
    </validationRules>
</CustomObject>